--- a/Configinicial/Configinicial.vcxproj
+++ b/Configinicial/Configinicial.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Shader.h" />
   </ItemGroup>
   <ItemGroup>
@@ -26,7 +27,7 @@
     <None Include="Shader\core.vs" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Modelado_Jerarquico.cpp" />
+    <ClCompile Include="Carga de Modelos.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
@@ -86,13 +87,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\glm;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLEW\include;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLFW\include;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\glm;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLEW\include;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLFW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\ellio\Downloads\Laboratorio_grafica\External Libraries\assimp\include;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\glm;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLEW\include;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLFW\include;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\glm;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLEW\include;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLFW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLFW\lib-vc2015;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLEW\lib\Release\Win32;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLEW\lib\Release\Win32;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLFW\lib-vc2015;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\ellio\Downloads\Laboratorio_grafica\External Libraries\assimp\lib;C:\Users\ellio\Downloads\Laboratorio_grafica\External Libraries\SOIL2\lib;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLFW\lib-vc2015;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLEW\lib\Release\Win32;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLEW\lib\Release\Win32;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLFW\lib-vc2015;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>soil2-debug.lib;assimp-vc140-mt.lib;opengl32.lib;glew32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -103,15 +104,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\glm;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLEW\include;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLFW\include;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\glm;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLEW\include;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLFW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\ellio\Downloads\Laboratorio_grafica\External Libraries\assimp\include;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\glm;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLEW\include;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLFW\include;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\glm;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLEW\include;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLFW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLFW\lib-vc2015;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLEW\lib\Release\Win32;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLEW\lib\Release\Win32;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLFW\lib-vc2015;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\ellio\Downloads\Laboratorio_grafica\External Libraries\assimp\lib;C:\Users\ellio\Downloads\Laboratorio_grafica\External Libraries\SOIL2\lib;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLFW\lib-vc2015;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLEW\lib\Release\Win32;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLEW\lib\Release\Win32;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLFW\lib-vc2015;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>soil2-debug.lib;assimp-vc140-mt.lib;opengl32.lib;glew32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -120,13 +121,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\glm;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLEW\include;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLFW\include;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\glm;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLFW\include;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\ellio\Downloads\Laboratorio_grafica\External Libraries\assimp\include;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\glm;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLEW\include;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLFW\include;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\glm;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLFW\include;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLFW\lib-vc2015;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLEW\lib\Release\Win32;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLFW\lib-vc2015;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLEW\lib\Release\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\ellio\Downloads\Laboratorio_grafica\External Libraries\assimp\lib;C:\Users\ellio\Downloads\Laboratorio_grafica\External Libraries\SOIL2\lib;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLFW\lib-vc2015;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLEW\lib\Release\Win32;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLFW\lib-vc2015;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLEW\lib\Release\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>soil2-debug.lib;assimp-vc140-mt.lib;opengl32.lib;glew32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -137,15 +138,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\glm;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLEW\include;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLFW\include;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\glm;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLEW\include;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLFW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\ellio\Downloads\Laboratorio_grafica\External Libraries\assimp\include;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\glm;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLEW\include;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLFW\include;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\glm;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLEW\include;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLFW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLFW\lib-vc2015;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLEW\lib\Release\Win32;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLEW\lib\Release\Win32;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLFW\lib-vc2015;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\ellio\Downloads\Laboratorio_grafica\External Libraries\assimp\lib;C:\Users\ellio\Downloads\Laboratorio_grafica\External Libraries\SOIL2\lib;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLFW\lib-vc2015;C:\Users\CGIH06\Documents\GitHub\Laboratorio_grafica\External Libraries\GLEW\lib\Release\Win32;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLEW\lib\Release\Win32;C:\Users\ellio\OneDrive\Escritorio\Configinicial\External Libraries\GLFW\lib-vc2015;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>soil2-debug.lib;assimp-vc140-mt.lib;opengl32.lib;glew32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
