--- a/Configinicial/Configinicial.vcxproj.filters
+++ b/Configinicial/Configinicial.vcxproj.filters
@@ -21,17 +21,20 @@
     <ClInclude Include="Shader.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shader\core.frag">
-      <Filter>Archivos de origen\Shader</Filter>
+      <Filter>Archivos de origen</Filter>
     </None>
     <None Include="Shader\core.vs">
-      <Filter>Archivos de origen\Shader</Filter>
+      <Filter>Archivos de origen</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Modelado_Jerarquico.cpp">
+    <ClCompile Include="Carga de Modelos.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
   </ItemGroup>
